@@ -1,3 +1,9 @@
+2007-02-25  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/lib/cairo.rb: supported Ruby-GNOME2 GUI Installer
+	for Win32.
+	Thanks to Masao Mutoh!
+
 2007-02-04  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/ext/rb_cairo_surface.c: the first argument of
